chore(fix): margin bottom on mobile view

--- a/packages/cxl-ui/scss/global/cxl-vaadin-accordion.scss
+++ b/packages/cxl-ui/scss/global/cxl-vaadin-accordion.scss
@@ -312,7 +312,7 @@ cxl-vaadin-accordion {
   // make avatar visible on the right
   &[theme~="cxl-dashboard-cards"] {
     cxl-accordion-card {
-      margin-bottom: var(--lumo-space-s);
+      margin-bottom: var(--lumo-space-m);
       @media #{mq.$large} {
         margin-bottom: 0;
       }
